# rust-cli-boilerplate

./: Cargo.toml  Dockerfile  Settings.toml  build-docker.sh
src/: args.rs  config.rs  logging.rs  main.rs
