[package]
name = "rust-cli-boilerplate"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1.0"
config = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.6"
slog-term = "2.6"
slog-async = "2.6"
slog-scope = "4.4"
 